--- a/templates/Confirm.html
+++ b/templates/Confirm.html
@@ -1,10 +1,39 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>a</head>
-<body>
-    <h1>Successfully submitted</h1>
-</body>
-</html>a
+{% extends "index.html" %}
+
+{% block content %}
+  
+<style>
+    .wrapper {
+        height: 100%;
+        width: 100%;
+        background-color: rgba(0, 0, 0, .9);
+        z-index: 20;
+    }
+    .popupAlert {
+        position: absolute;
+        top: 30%;
+        left: 30%;
+        /* transform: translate(-50, -50); */
+        height: 300px;
+        width: 600px;
+        background-color: #f4f4f4;
+        z-index: 10;
+        box-shadow: 5px 5px 15px rgb(84, 196, 122, .2);
+        text-align: center;
+        border: 1px solid #ccc;
+        border-radius: 10px;        
+}
+h1 {
+    margin-top: 10%;
+}
+</style>
+<!-- <body> -->
+    <div class="wrapper">
+
+        <div class="popupAlert">
+            <h1>Successfully submitted</h1>
+        </div>
+    </div>
+<!-- </body> -->
+{% endblock content %}
+
