--- a/templates/index.html
+++ b/templates/index.html
@@ -7,9 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Paylio - Money Transfer and Online Payments Dashboard HTML Template</title>
+    <title>Swift Service Request</title>
 
-    <link rel="shortcut icon" href="{% static 'assets/images/fav.png' %} " type="image/x-icon">
     <link rel="stylesheet" href="{% static 'assets/css/bootstrap.min.css' %} ">
     <link rel="stylesheet" href="{% static 'assets/css/fontawesome.min.css' %} ">
     <link rel="stylesheet" href="{% static 'assets/css/jquery-ui.css' %} ">
@@ -136,7 +135,7 @@
     </header>
     <!-- header-section end -->
     {% block content %}
-    
+
     {% endblock content %}
     <!-- Dashboard Section start -->
     <section class="dashboard-section body-collapse account">
